@@ -641,6 +641,7 @@ pass :: Adds a pass method allowing you to skip the current +r.on+ block as if
         it did not match.
 render :: Adds support for rendering templates via tilt, as described above.
 streaming :: Adds support for streaming responses.
+symbol_matchers :: Adds support for symbol-specific matching regexps.
 
 === External Plugins
 
